Fix parallax flicker

--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -1,5 +1,4 @@
-@import "../../../../less/variables.less";
-// Scroll progress bar
+@import "../../../../less/variables.less"; // Scroll progress bar
 // Paralax effect: https://github.com/nk-o/jarallax
 // Page is 100% wide
 
@@ -89,6 +88,12 @@
     }
   }
 }
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  /* IE 11 only in order to understand vertical alignment */
+  .campaign-block {
+    height: 500px;
+  }
+}
 
 .jarallax {
   color: @text-color;
@@ -128,8 +133,8 @@
       padding: 30px;
     }
   }
-+
-  .jarallax {
+
+  + .jarallax {
     .block-content {
       box-shadow: 0 1px 8px rgba(@gray-base, .1), 0 16px 48px rgba(@gray-base, .1), 0 24px 60px rgba(@gray-base, .1);
     }
